cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(1_two-sum 1_two-sum.cc)
add_executable(2_add-two-numbers 2_add-two-numbers.cc)
add_executable(50_my-pow 50_my-pow.cc)
add_executable(72_min-distance 72_min-distance.cc)
add_executable(130_surrounded-regions 130@_surrounded-regions.cc)
add_executable(136_single-number 136_single-number.cc)
add_executable(611_valid-triangle-number 611_valid-triangle-number.cc)