cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(1_two-sum 1_two-sum.cc)
add_executable(2_add-two-numbers 2_add-two-numbers.cc)
add_executable(3_length-of-longest-substring 3_length-of-longest-substring.cc)
add_executable(4_find-median-sorted-arrays 4_find-median-sorted-arrays.cc)
add_executable(5_longest-palindrome 5_longest-palindrome.cc)
add_executable(6_string-z-convert 6_string-z-convert.cc)
add_executable(7_integer-reverse 7_integer-reverse.cc)
add_executable(8_my-atoi 8_my-atoi.cc)
add_executable(9_is-palindrome 9_is-palindrome.cc)
add_executable(10_is-match 10_is-match.cc)
add_executable(11_max-area 11_max-area.cc)
add_executable(12_int-to-roman 12_int-to-roman.cc)
add_executable(13_roman-to-int 13_roman-to-int.cc)
add_executable(14_longest-common-prefix 14_longest-common-prefix.cc)
add_executable(15-three-sum 15-three-sum.cc)
add_executable(16_three-sum-closest 16_three-sum-closest.cc)
add_executable(17_letter-combinations 17_letter-combinations.cc)
add_executable(50_my-pow 50_my-pow.cc)
add_executable(72_min-distance 72_min-distance.cc)
add_executable(130_surrounded-regions 130@_surrounded-regions.cc)
add_executable(136_single-number 136_single-number.cc)
add_executable(146_LRU-cache 146_LRU-cache.cc)
add_executable(207_can-finish 207_can-finish.cc)
add_executable(224_calculate 224_calculate.cc)
add_executable(611_valid-triangle-number 611_valid-triangle-number.cc)
