cmake_minimum_required(VERSION 3.12)

set(CMAKE_CXX_STANDARD 11)

add_executable(1_two-sum 1_two-sum.cc)
add_executable(2_add-two-numbers 2_add-two-numbers.cc)
add_executable(3_length-of-longest-substring 3_length-of-longest-substring.cc)
add_executable(4_find-median-sorted-arrays 4_find-median-sorted-arrays.cc)
add_executable(5_longest-palindrome 5_longest-palindrome.cc)
add_executable(6_string-z-convert 6_string-z-convert.cc)
add_executable(7_integer-reverse 7_integer-reverse.cc)
add_executable(8_my-atoi 8_my-atoi.cc)
add_executable(9_is-palindrome 9_is-palindrome.cc)
add_executable(10_is-match 10_is-match.cc)
add_executable(11_max-area 11_max-area.cc)
add_executable(12_int-to-roman 12_int-to-roman.cc)
add_executable(13_roman-to-int 13_roman-to-int.cc)
add_executable(14_longest-common-prefix 14_longest-common-prefix.cc)
add_executable(15-three-sum 15-three-sum.cc)
add_executable(16_three-sum-closest 16_three-sum-closest.cc)
add_executable(17_letter-combinations 17_letter-combinations.cc)
add_executable(18_four-sum 18_four-sum.cc)
add_executable(19_remove-nth-from-end 19_remove-nth-from-end.cc)
add_executable(20_is-valid 20_is-valid.cc)
add_executable(21-merge_two_lists 21_merge-two-lists.cc)
add_executable(22_generate-parenthesis 22_generate-parenthesis.cc)
add_executable(23_merge-k-lists 23_merge-k-lists.cc)
add_executable(24_swap-pairs 24_swap-pairs.cc)
add_executable(25_reverse-k-group 25_reverse-k-group.cc)
add_executable(26_remove-duplicates 26_remove-duplicates.cc)
add_executable(27_remove-element 27_remove-element.cc)
add_executable(28_strstr 28_strstr.cc)
add_executable(29_divide 29_divide.cc)
add_executable(30_find-substring 30_find-substring.cc)
add_executable(31_next-permutation 31_next-permutation.cc)
add_executable(39_combination-sum 39_combination-sum.cc)
add_executable(50_my-pow 50_my-pow.cc)